--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,16 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "commonjs",
-    "rootDir": "./src",
-    "outDir": "./dist",
+    "target": "ES5",
+    "module": "none",
+    "outFile": "./dist/budget-tracker.js",
+
+    "lib": ["ES2017", "DOM"],
+
     "strict": true,
-    "esModuleInterop": true
-  }
+    "removeComments": false,
+    "sourceMap": false,
+    "noImplicitAny": false,
+    "noEmitOnError": true
+  },
+  "include": ["src/**/*"]
 }
