--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "budget-tracker-cli",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "tsc --watch"
+    "start": "npx tsx src/index.ts",
+    "build": "tsc"
   },
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
+    "@types/node": "^20.5.0",
+    "@types/uuid": "^9.0.2",
+    "tsx": "^4.12.1",
     "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "inquirer": "^13.0.2",
+    "moment": "^2.30.0",
+    "uuid": "^9.0.0"
   }
 }
